# mcp-todo

./: .env.example  .gitignore  CLAUDE.md  README.md  REVIEW_FIXES.md  docker-compose.dev.yml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: agent-rs-release.yml  ci.yml
agent/: README.md  build.bat  build.sh  main.py  mcp-workspace-agent.spec  pyproject.toml  self_update.py  test_chat_manager.py  test_path_safety.py  test_remote_handlers.py  test_self_update.py
agent-rs/: .gitignore  Cargo.toml  README.md
agent-rs/src/: client.rs  main.rs  path_safety.rs  proto.rs  self_update.rs  version.rs
agent-rs/src/handlers/: fs_read.rs  fs_write.rs  mod.rs
agent-rs/src/pty/: mod.rs  session.rs
agent-rs/tests/: parity_runner.rs
agent-rs/tests/parity/: README.md
agent-rs/tests/parity/fixtures/list_dir/: basic.json
agent-rs/tests/parity/fixtures/read_file/: basic_text.json  missing_cwd.json  offset_limit.json
agent-rs/tests/parity/fixtures/stat/: existing_file.json
agent-rs/tests/parity/fixtures/write_file/: basic.json  traversal_rejected.json
backend/: Dockerfile  docker-compose.test.yml  pyproject.toml
backend/app/: cli.py  main.py
backend/app/api/: error_tracker_ingest.py
backend/app/api/v1/endpoints/: attachments.py  auth.py  backup.py  bookmark_assets.py  bookmarks.py  chat.py  docsites.py  documents.py  error_tracker.py  events.py  internal.py  knowledge.py  mcp_keys.py  mcp_usage.py  projects.py  public_config.py  secrets.py  task_live.py  tasks.py  terminal.py  users.py
backend/app/api/v1/endpoints/auth/: __init__.py  google.py  webauthn.py
backend/app/api/v1/endpoints/bookmarks/: _shared.py  items.py
backend/app/api/v1/endpoints/tasks/: __init__.py  _shared.py  crud.py  lifecycle.py  links.py
backend/app/api/v1/endpoints/terminal/: __init__.py  _releases_util.py  _shared.py  agents.py  releases.py  websocket.py  workspaces.py
backend/app/api/v1/endpoints/workspaces/: __init__.py  _releases_util.py  _shared.py  _supervisor_releases_util.py  agents.py  releases.py  supervisor_releases.py  supervisor_ws.py  supervisors.py  terminal.py  websocket.py  workspaces.py
backend/app/core/: config.py  crypto.py  database.py  deps.py  metrics.py  redis.py  security.py  validators.py
backend/app/lib/: url_contract.py
backend/app/mcp/: auth.py  oauth_consent.py  oauth_provider.py  server.py  well_known.py
backend/app/mcp/middleware/: __init__.py  usage_tracking.py
backend/app/mcp/oauth/: __init__.py  _authorization.py  _base.py  _clients.py  _models.py  _redis.py  _tokens.py
backend/app/mcp/tools/: bookmarks.py  docsites.py  documents.py  error_tracker.py  knowledge.py  projects.py  remote.py  secrets.py  setup.py  tasks.py
backend/app/models/: __init__.py  allowed_email.py  bookmark.py  chat.py  docsite.py  error_tracker.py  knowledge.py  mcp_api_key.py  mcp_tool_usage.py  project.py  remote.py  secret.py  task.py  terminal.py  user.py
backend/app/services/: agent_bus.py  agent_local_transport.py  agent_manager.py  bookmark_cleanup.py  bookmark_clip.py  bookmark_import.py  bookmark_metadata.py  bookmark_search.py  chat_events.py  clip_twitter.py  docsite_import.py  docsite_search.py  document_export.py  document_search.py  events.py  index_notifications.py  indexer_consumer.py  knowledge_search.py  markdown_import.py  remote_tool_spec.py  search.py  serializers.py  supervisor_bus.py  supervisor_manager.py  task_approval.py  task_export.py  task_links.py  terminal_router.py
backend/app/services/error_tracker/: auth.py  capture.py  lifecycle.py  provision.py
backend/tests/: conftest.py  test_audit.py  test_auth.py  test_auto_admin.py  test_bookmarks.py  test_crypto.py  test_docsites.py  test_document_export.py  test_health.py  test_mcp_oauth_e2e.py  test_mcp_usage.py
backend/tests/helpers/: factories.py
backend/tests/integration/: test_agent_bus_realredis.py  test_agent_releases.py  test_auth.py  test_backup.py  test_chat.py  test_events.py  test_internal.py  test_markdown_import.py  test_mcp_keys.py  test_project_remote.py  test_projects.py  test_security.py  test_task_approval_cascade.py  test_task_links.py  test_task_live.py  test_tasks.py  test_user_detail_endpoints.py  test_users.py  test_webauthn.py  test_workspace_agents.py  test_workspaces.py
backend/tests/unit/: test_agent_bus.py  test_agent_manager.py  test_clip_pipeline.py  test_index_notifications.py  test_indexer_consumer.py  test_markdown_import.py  test_mcp_auth.py  test_mcp_bookmark_tools.py  test_mcp_docsite_tools.py  test_mcp_document_tools.py  test_mcp_knowledge.py  test_mcp_overdue.py  test_mcp_project_tools.py  test_mcp_remote_tools.py  test_mcp_tools.py  test_rate_limit.py  test_search_index_rebuild_skip.py  test_search_services.py  test_security.py  test_session_manager.py  test_task_links.py  test_terminal_response_types.py  test_terminal_router.py  test_url_contract.py
backup/: Dockerfile  backup.sh  entrypoint.sh
docs/api/: url-contract.fixtures.json  url-contract.md
docs/architecture/: multi-worker-sidecar.md
docs/mcp-tools/: remote.md  url-lookup.md
docs/perf/: remote_tools_baseline.md
docs/review/: code-review-2026-04-28.md
e2e/fixtures/: workbench.ts
e2e/tests/feature/: workbench-add-tab-with-type.spec.ts  workbench-cross-tab-sync.spec.ts  workbench-preset-reset.spec.ts  workbench-split.spec.ts  workbench-tab-drag.spec.ts  workbench-url-deeplink.spec.ts
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  globals.d.ts  index.css  main.tsx
frontend/src/api/: client.ts  (+4 more)
mcp/: .dockerignore  Dockerfile  pyproject.toml
mcp/app/: api_client.py  auth.py  config.py  main.py  server.py  session_store.py
mcp/app/tools/: projects.py  tasks.py
mcp/tests/: test_tools_tasks.py
nginx/: nginx.conf
supervisor/: Cargo.toml
supervisor/src/: agent_release.rs  bootstrap.rs  config.rs  handlers.rs  log_capture.rs  main.rs  platform_posix.rs  platform_windows.rs  process.rs  protocol.rs
traefik/: traefik.yml
traefik/dynamic/: middlewares.yml
(+126 files in other folders)
