[package]
name = "mcp-workspace-agent-rs"
version = "0.6.0-dev"
edition = "2021"
rust-version = "1.78"
description = "Cross-platform Rust port of the mcp-todo workspace agent."
license = "MIT"

[[bin]]
# Distinct from the Python agent's `mcp-workspace-agent.exe` so
# `taskkill /IM mcp-workspace-agent.exe` doesn't cascade-kill it
# during the parallel-run PoC. Renamed in agent-rs/10 once the
# Python version is retired.
name = "mcp-workspace-agent-rs"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
# Pull rustls in directly so the `ring` crypto provider is compiled in.
# rustls 0.23+ requires either `ring` or `aws-lc-rs` to be enabled, and
# without an explicit dep tokio-tungstenite's transitive selection
# leaves the provider unset → CryptoProvider::install_default panic
# at first WS connect. We initialise it explicitly in `main`.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
rand = "0.8"
# Strip Windows `\\?\` UNC prefix from canonicalize results so paths
# stay comparable with the user-supplied form. No-op on Unix.
dunce = "1"
# Binary file content is wire-encoded as base64 (read_file `encoding=binary|base64`).
base64 = "0.22"
# pathlib-compatible glob patterns (`*`, `?`, `**`, `[...]`) — used by the
# `glob` handler. Matches Python's `pathlib.Path.glob` semantics where
# `*` does not cross directory boundaries and `**` matches any depth.
glob = "0.3"
# Recursive directory walk used by `glob` and (later) `tree`/`grep`.
walkdir = "2"
# Background-job IDs (`exec_background`) — 12 hex chars taken from
# uuid::Uuid::new_v4 to match Python's `_uuid.uuid4().hex[:12]`.
uuid = { version = "1", features = ["v4"] }
# Used by edit_file's "nearest candidates" UX hint when old_string
# isn't found verbatim. We approximate Python's `difflib.get_close_matches`
# (gestalt pattern matching) with normalized Jaro-Winkler — close
# enough for a hint, much cheaper than a full SequenceMatcher port.
strsim = "0.11"
# ripgrep-as-library: removes the external `rg` binary dependency that
# the Python agent relied on. `ignore` walks the FS honouring
# .gitignore (or skip-dir overrides); `grep-searcher` + `grep-regex`
# do the actual line search.
grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"
ignore = "0.4"
# self-update HTTP client. rustls-tls so we don't drag in OpenSSL on
# Windows. `stream` enables `bytes_stream` for incremental SHA-256
# during download (matches Python's chunked verify).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }

# POSIX-only: send SIGKILL to the *process group* on exec timeout,
# matching Python's `os.killpg(os.getpgid(pid), SIGKILL)` so the
# shell's children die too (otherwise `bash -c "sleep 60 & ..."`
# leaves orphans).
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", default-features = false, features = ["signal"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
opt-level = "z"
