[project]
name = "mcp-terminal-agent"
version = "0.2.4"
description = "Remote terminal agent for MCP Todo"
requires-python = ">=3.10"
dependencies = [
    "websockets>=13.0",
]

[project.scripts]
mcp-terminal-agent = "main:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
