[project]
name = "mcp-workspace-agent"
version = "0.4.0"
description = "Remote terminal agent for MCP Todo"
requires-python = ">=3.10"
dependencies = [
    "websockets>=13.0",
]

[project.scripts]
mcp-workspace-agent = "main:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
