[project]
name = "mcp-todo-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "fastmcp>=2.3,<3.0",
    "uvicorn[standard]>=0.32,<1.0",
    "beanie>=1.27,<2.0",
    "motor>=3.6,<4.0",
    "redis[asyncio]>=5.2,<6.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "PyJWT[crypto]>=2.9,<3.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "bcrypt>=4.0,<5",
    "httpx>=0.28,<1.0",
    "authlib>=1.4,<2.0",
    "python-multipart>=0.0.20,<1.0",
    "orjson>=3.10,<4.0",
    "playwright>=1.49,<2.0",
    "Markdown>=3.7,<4.0",
    "pymdown-extensions>=10.14,<11.0",
    "webauthn>=2.0,<3.0",
    "trafilatura>=2.0,<3.0",
    "markdownify>=0.14,<1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "fakeredis>=2.26",
    "mongomock-motor>=0.0.34",
    "pytest-cov>=6",
    "pytest-env>=1.1",
    "respx>=0.21",
    "testcontainers[mongodb,redis]>=4.8",
    "pip-audit>=2.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
env = [
    "SECRET_KEY=test-secret-key-for-testing-purposes-only-32x",
    "REFRESH_SECRET_KEY=test-refresh-secret-key-for-testing-purposes",
    "MONGO_DBNAME=claude_todo_test",
    "FRONTEND_URL=http://localhost:3000",
    "WEBAUTHN_RP_ID=localhost",
    "WEBAUTHN_RP_NAME=MCP Todo",
    "WEBAUTHN_ORIGIN=http://localhost:3000",
    "TESTING=1",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py"]

[tool.coverage.report]
fail_under = 70
